# miniPIC

./: README.APEX  README.md
extra/: do-configure.compton.sh  do-configure.sh  do-configure.shannon.sh  nvcc_wrapper
run/: brick-ref.txt  minipic-mpi-24-omp-1-run-0.out  minipic-mpi-4096-omp-6-run-0.out  submit-1024.slurm  submit-24.slurm
src/: CMakeLists.txt
