INCLUDE_DIRECTORIES (${CMAKE_CURRENT_SOURCE_DIR})
message("Compile=${CMAKE_CXX_COMPILER}")
message("FLAGS=${CMAKE_CXX_FLAGS}")


file (GLOB SOURCES *.cpp)
LIST(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)

file (GLOB HEADERS *.hpp)

ADD_LIBRARY(mini-PIC ${SOURCES} ${HEADERS} )

TARGET_LINK_LIBRARIES(mini-PIC ${Trilinos_LIBRARIES} ${Trilinos_TPL_LIBRARIES} )

ADD_EXECUTABLE(main main.cpp )
TARGET_LINK_LIBRARIES(main mini-PIC)

